--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -14,7 +15,10 @@
   "rules": {
     "@typescript-eslint/consistent-type-assertions": [
       "warn",
-      { "assertionStyle": "as", "objectLiteralTypeAssertions": "never" }
+      {
+        "assertionStyle": "as",
+        "objectLiteralTypeAssertions": "never"
+      }
     ]
   }
 }
