--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "@types/node": "^18.11.18",
@@ -27,6 +27,9 @@
     "@typescript-eslint/parser": "^5.49.0",
     "babel-jest": "^29.4.1",
     "eslint": "^8.32.0",
-    "jest": "^29.4.1"
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.1",
+    "prettier": "^2.8.4"
   }
 }
