--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "build": "tsc",
     "local": "ts-node src/index.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "format": "eslint . --fix",
     "prepare": "husky install",
     "test": "jest",
     "types": "tsc --noEmit --pretty"
   },
   "dependencies": {
-    "@types/node": "^18.15.1",
+    "@types/node": "^18.15.11",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "babel-jest": "^29.5.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.7"
   }
 }
