--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 .yarn_job:
   image: node:gallium-alpine3.18@sha256:f711d8a40d3515d7d44e344306382179fc8bfc4fe75f1a77b27a686a88649430
   before_script:
-    - yarn install
+    - yarn
 
 stages:
   - test
