--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "packages": [
+    "packages/shared/*",
     "packages/*"
   ],
   "version": "0.0.0",
-  "npmClient": "yarn",
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
+  "npmClient": "yarn"
 }
