--- a/packages/music/package.json
+++ b/packages/music/package.json
@@ -14,14 +14,11 @@
     "@cat/utils": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.5",
     "@cat/types": "^1.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
-    "babel-jest": "^29.6.2",
-    "jest": "^29.6.2",
+    "jest": "^29.6.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
