--- a/packages/shared/cat-utils/package.json
+++ b/packages/shared/cat-utils/package.json
@@ -11,13 +11,10 @@
     "types": "tsc --noEmit --pretty"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
-    "babel-jest": "^29.6.2",
-    "jest": "^29.6.2",
+    "jest": "^29.6.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
