--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 build/
 coverage/
 node_modules/
+lerna-debug.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
