--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,5 @@
 {
-  "packages": [
-    "packages/shared/*",
-    "packages/*"
-  ],
-  "version": "0.0.0",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "version": "1.0.0",
   "npmClient": "yarn"
 }
