--- a/packages/music/package.json
+++ b/packages/music/package.json
@@ -15,11 +15,12 @@
   },
   "devDependencies": {
     "@cat/types": "^1.0.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.5.0",
-    "jest": "^29.6.3",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "jest": "^29.6.4",
+    "jest-junit": "16.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
