--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   ],
   "scripts": {
     "build": "lerna run build",
-    "lint": "eslint .",
-    "format": "eslint . --fix",
+    "lint": "eslint --ext .ts,.js .",
+    "format": "yarn run lint --fix",
     "postinstall": "npx is-ci || husky install",
     "test": "lerna run test --stream",
     "types": "lerna run types"
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "jest-junit": "16.0.0",
