--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "sourceMap": true
   },
   "include": [
-    "**/*.ts*"
+    "**/src/**/*.ts*"
   ],
   "exclude": [
-    "node_modules/**"
+    "**/node_modules/**/*"
   ]
 }
