--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on: [push]
   #   branches: [ "main" ]
 
 jobs:
-  test:
+  install:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -15,24 +15,33 @@ jobs:
       with:
         node-version: '20'
     - run: yarn
+
+  test:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '20'
     - run: yarn test
 
   lint:
+    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
         node-version: '20'
-    - run: yarn
     - run: yarn lint
 
   types:
+    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
         node-version: '20'
-    - run: yarn
     - run: yarn types
