--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Get yarn cache dir path
       id: yarn-cache-dir-path
-      run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      run: echo "dir=$(.yarn/cache/**)" >> $GITHUB_OUTPUT
     - uses: actions/cache@v4
       id: yarn-cache
       with:
