--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,7 @@ jobs:
       run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
     - uses: actions/cache@v4
       id: yarn-cache
+      run: echo "$steps.yarn-cache-dir-path.outputs.dir"
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
