--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,14 +15,13 @@ jobs:
       with:
         node-version: '20'
     - run: yarn
-    - name: Get yarn cache dir path
-      id: yarn-cache-dir-path
-      run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
+    # - name: Get yarn cache dir path
+    #   id: yarn-cache-dir-path
+    #   run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
     - uses: actions/cache@v4
       id: yarn-cache
-      run: echo "$steps.yarn-cache-dir-path.outputs.dir"
       with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        path: ~/.yarn/cache
         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-yarn-
