--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Get yarn cache dir path
       id: yarn-cache-dir-path
       # run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
-      run: pwd
+      run: ls -a
     - uses: actions/cache@v4
       id: yarn-cache
       with:
