Remove debugging prints

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,8 +17,7 @@ jobs:
     - run: yarn
     - name: Get yarn cache dir path
       id: yarn-cache-dir-path
-      # run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
-      # run: pwd (/home/runner/work/cat-library/cat-library)
+      run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
       run: ls -a .yarn
     - uses: actions/cache@v4
       id: yarn-cache
