--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,28 +7,7 @@ on: [push]
   #   branches: [ "main" ]
 
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'yarn'
-    - run: yarn
-    # - name: Get yarn cache dir path
-    #   id: yarn-cache-dir-path
-    #   run: echo "dir=$(.yarn/cache)" >> $GITHUB_OUTPUT
-    # - uses: actions/cache@v4
-    #   id: yarn-cache
-    #   with:
-    #     path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-    #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-yarn-
-
   test:
-    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -39,22 +18,22 @@ jobs:
     - run: yarn
     - run: yarn test
 
-  # lint:
-  #   needs: install
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     with:
-  #       node-version: '20'
-  #   - run: yarn lint
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - run: yarn
+    - run: yarn lint
 
-  # types:
-  #   needs: install
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     with:
-  #       node-version: '20'
-  #   - run: yarn types
+  types:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - run: yarn
+    - run: yarn types
