Add yarn install back

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: '20'
         cache: 'yarn'
-    # - run: yarn
+    - run: yarn
     - run: yarn test
 
   # lint:
