--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,13 @@ jobs:
       with:
         node-version: '20'
         cache: 'yarn'
+    - uses: actions/upload-artifact@v4
+      with:
+        name: install-files
+        path: |
+          .yarn/*
+          .pnp.*
+        retention-days: 2
     - run: yarn
     - run: yarn build
 
@@ -27,7 +34,8 @@ jobs:
       with:
         node-version: '20'
         cache: 'yarn'
-    - run: yarn
+    - uses: actions/download-artifact@v4
+    # - run: yarn
     - run: yarn test
 
   # lint:
