--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,24 +7,6 @@ on: ["push"]
   #   branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'yarn'
-    - run: yarn
-    - run: yarn build
-    - uses: actions/upload-artifact@v4
-      with:
-        name: install-files
-        path: |
-          .yarn/*
-          .pnp.*
-        retention-days: 2
-
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -35,27 +17,27 @@ jobs:
         node-version: '20'
         cache: 'yarn'
     - uses: actions/download-artifact@v4
-    # - run: yarn
+    - run: yarn
     - run: yarn test
 
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     with:
-  #       node-version: '20'
-  #       cache: 'yarn'
-  #   - run: yarn
-  #   - run: yarn lint
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'yarn'
+    - run: yarn
+    - run: yarn lint
 
-  # types:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     with:
-  #       node-version: '20'
-  #       cache: 'yarn'
-  #   - run: yarn
-  #   - run: yarn types
+  types:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'yarn'
+    - run: yarn
+    - run: yarn types
