--- a/.github/workflows/set-up-node.yml
+++ b/.github/workflows/set-up-node.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   set-up-node:
     steps:
+    - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
