--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,8 +9,7 @@ on: ["push"]
 jobs:
   test:
     uses: ./.github/workflows/set-up-node.yml
-    steps:
-    - run: yarn test
+    run: yarn test
 
   lint:
     runs-on: ubuntu-latest
