--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,28 +8,16 @@ on: ["push"]
 
 jobs:
   test:
-    uses: ./.github/workflows/set-up-node.yml
+    uses: ./.github/workflows/node.yml
     with:
       task: test
 
   lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'yarn'
-    - run: yarn
-    - run: yarn lint
+    uses: ./.github/workflows/node.yml
+    with:
+      task: lint
 
   types:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'yarn'
-    - run: yarn
-    - run: yarn types
+    uses: ./.github/workflows/node.yml
+    with:
+      task: types
