--- a/.github/workflows/cleanup-cache.yml
+++ b/.github/workflows/cleanup-cache.yml
@@ -9,7 +9,8 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - name: Cleanup caches
+        run: |
           gh extension install actions/gh-actions-cache
 
           echo "Fetching list of cache key"
